Graylog/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-service
  namespace: graylog
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
  selector:
    app: graylog
