Graylog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog-ingress
  namespace: graylog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: graylog.seu.dominio
      http:
        paths:
          - backend:
              service:
                name: graylog-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - graylog.seu.dominio
      secretName: graylog-tls
